cleanup the render

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   <div class="menu">
     <ul>
       <li>Home</li>
-      <li>&nbsp;|&nbsp;<a href="./doc/index.html" title="Mychem documentation">
-Documentation</a></li>
+      <li>&nbsp;|&nbsp;<a href="./doc/index.html" title="Mychem documentation">Documentation</a></li>
       <li>&nbsp;|&nbsp;<a href="./api/index.html" title="API">API</a></li>
       <li>&nbsp;|&nbsp;<a href="http://sourceforge.net/project/showfiles.php?group_id=195099" title="Download Mychem">Download</a></li>
     </ul>
@@ -77,8 +76,8 @@ CMake.<sup>[<a href="#ref4">4</a>]</sup>
 The last version of Mychem can be downloaded on GitHub:
   </p>
 <ul>
-<li><a href="https://github.com/mychem/mychem-code/archive/v0.9.3.tar.gz" title="TGZ file">https://github.com/mychem/mychem-code/archive/v0.9.3.tar.gz</a></li>
-<li><a href="https://github.com/mychem/mychem-code/archive/v0.9.3.zip" title="ZIP file">https://github.com/mychem/mychem-code/archive/v0.9.3.zip</a></li>
+<li><a href="http://sourceforge.net/projects/mychem/files/mychem/0.9.3/mychem-0.9.3.tgz/download" title="TGZ file">mychem-0.9.3.tgz</a></li>
+<li><a href="http://sourceforge.net/projects/mychem/files/mychem/0.9.3/mychem-0.9.3.zip/download" title="ZIP file">mychem-0.9.3.zip</a></li>
 </ul>
 <p>
 You can download previous versions on the following page:<br />
@@ -89,8 +88,7 @@ http://sourceforge.net/project/showfiles.php?group_id=195099
 
   <!-- The licensse -->
   <h3>License</h3>
-  <p>The Mychem application is released under the GNU General Public License,
-version 2 of the License, or (at your option) any later option.</p>
+  <p>Mychem is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation version 2 of the License, or (at your option) any later version. Full details can be found in the <a href="https://github.com/mychem/mychem-code/blob/master/COPYING" title="COPYING file">COPYING file</a>.
 
   <!-- Useful references for the MyChem project -->
   <h3>References</h3>
